# opuslib-next-bundled

./: .gitignore  CMakeLists.txt  LICENSE  NOTICE  README.md  pyproject.toml
.github/workflows/: wheels.yml
LICENSES/: opus.txt  opuslib-next.txt
cmake/: normalize_bundled_lib.cmake
opuslib_next/: __init__.py  _loader.py  classes.py  constants.py  exceptions.py
opuslib_next/api/: __init__.py  ctl.py  decoder.py  encoder.py  multistream_decoder.py  multistream_encoder.py  projection_decoder.py  projection_encoder.py
tests/: __init__.py  conftest.py  decoder.py  encoder.py  hl_decoder.py  hl_encoder.py  hl_multistream.py  hl_projection.py  multistream.py  projection.py  test_exceptions.py  test_loader.py
